--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "android": {
       "src": "android"
     }
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
